# GenDocTools

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.openapi.yml  docker-compose.yml  openai_tool_server.py  pyproject.toml  server.py
OWUI tools/: chat_context.py
app/: __init__.py  auth.py  config.py  models.py  openapi_app.py  service.py  storage.py  urls.py
docs/: features.md  installation.md  usage.md
example/: Anolaima_Arcesio_Bermudez_1969.pptx  Cartagena_Temperature_Timeseries.xlsx  History_of_Neural_Nets_Summary_69d1751b-577b-4329-beca-ac16db7acdbd_reviewed.docx  systemprompt.md
example/DOCX/: claude haiku 4.5 - Gradient Descent.docx  claude_3_haiku.docx  deepseek v3.1 terminus gradient descent (1).docx  generated by claude haiku 4.5 - Gradient Descent Comprehensive Guide.docx  generated by deepseek V3.2 gradient descent.docx  generated by gemini 3 flash preview Gradient Descent Report.docx  generated by gpt 5.1 mini - gradient_descent_guide.docx  generated by grok 4.1 fast - Gradient Descent.docx  (+12 more)
scripts/: test_openapi_tools.sh
server/: __init__.py
src/: excel.md  markdown.md  mcp_instructions.md  powerpoint.md  word.md  word_template.md
tools/: docx_tool.py  excel_tool.py  markdown_tool.py  powerpoint_tool.py
utils/: argument_descriptions.py  authorization.py  document_builder.py  download_file.py  generate_word_template_body_check.py  get_user_id.py  img_dimensions.py  knowledge.py  load_md_templates.py  logger.py  pydantic_models_arguments.py  pydantic_models_endpoints.py  register_tools.py  upload_file.py
(+5 files in other folders)
