[project]
name = "GenFilesMCP"
version = "0.3.0-alpha.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "math2docx>=2.0.3",
    "mcp[cli]>=1.25.0",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pillow>=12.1.0",
    "pypandoc>=1.15",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-pptx>=1.0.2",
    "requests>=2.32.5",
]

[project.scripts]
genfilesmcp = "server.server:main"

[tool.setuptools.packages.find]

[tool.setuptools.package-data]
"src" = ["*.md"]
