[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GenFilesMCP"
version = "0.3.0-alpha.6"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "fastmcp>=2.14.5",
    "ipykernel>=7.2.0",
    "math2docx>=2.0.3",
    "mcp[cli]>=1.25.0",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pillow>=12.1.0",
    "pypandoc>=1.15",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-pptx>=1.0.2",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]

[project.scripts]
genfilesmcp = "server:main"

[tool.setuptools]
py-modules = ["server"]

[tool.setuptools.packages.find]
include = ["src", "tools", "utils"]

[tool.setuptools.package-data]
src = ["*.md"]
